Version 1.0.0
+ First release

Version 1.1.0
+ Support Java 9 Module
+ Add isEmpty() to JsonArrayBase and JsonObjectBase
* Change package name from com.github.wnameless.json to com.github.wnameless.json.base

Version 1.1.1
* Using "requires static" on Gson and Jackson

Version 1.2.0
+ Add Jsonable interface

Version 2.0.0
+ Add #asBigInteger, #asBigDecimal, #asNumber, #asNull
+ Add #toMap, #toList
+ Add JsonValueCore, JsonObjectCore, JsonArrayCore, JsonCore, JsonSource
+ Add JsonPrinter, JsonValueUtils

Version 2.1.0
* Fix JsonProter#prettyPrint bug
* Improve module-info.java

Version 2.2.0
* Alter all "requires static transitive" to "requires static" in module-info.java to avoid "module not found" error while compiling by other projects

Version 2.2.1
* Fix JsonPrinter bug on the edge case: having backslash before ending double quotes

Version 2.3.0
+ Add org.json lib support
+ Add Jakarta lib support